# mnvkd

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  Dockerfile  Dockerfile.bun  Dockerfile.cmake  Dockerfile.cmake.sh  Dockerfile.express  Dockerfile.http11  Dockerfile.http11.sh  Dockerfile.nginx  Dockerfile.test  Dockerfile.test.express  Dockerfile.test.unit  Dockerfile.vcpkg  Dockerfile.vcpkg.sh  Makefile  README.md  TODO.md  aggregation.md  bunhw.js  cleanup.md  debug.awk  debug.h  debug.sh  deck-mini.html  deck-mini.md  deck.html  deck.md  design.md  docker-compose.yaml  http_request_pipeline.txt  interfaces.md  io_submit_test.c  io_uring_test.c  isolation.md  lifecycle.md  macros.cmake  make_timeout.sh  (+199 more)
.devcontainer/: Dockerfile  devcontainer.json
static-triplets/: arm64-linux.cmake  arm64-osx.cmake  x64-linux.cmake  x64-osx.cmake  x64-windows.cmake
tools/: run-tests.sh
